# everscale-client-dotnet

./: .gitignore  development.md  readme.md  ton-client-dotnet.sln
.github/workflows/: deploy.yml  nuget_deploy.yml  release.yml  test.yml
bridge/: .gitignore  CMakeLists.txt  build.bat  build.sh  install.bat  install.sh  readme.md
bridge/cmake-modules/: FindTON.cmake  FindTon.cmake
bridge/include/: tonclient_dotnet_bridge.h
bridge/lib/: CMakeLists.txt  tonclient.h  tonclient_1_0_0-rc_win32_lib
bridge/src/: CMakeLists.txt  tonclient_dotnet_bridge.c
bridge/tests/: CMakeLists.txt  bridge.c
examples/: readme.md
examples/TonClient.BasicExample/: Program.cs  TonClient.BasicExample.csproj  readme.md
examples/TonClient.DebotExample/: DemoDebot.cs  Program.cs  TonClient.DebotExample.csproj  readme.md
examples/TonClient.Examples.Lib/: SerilogLogger.cs  TonClient.Examples.Lib.csproj
generator/: .editorconfig  .gitignore  api.index.txt  api.json  api.ts  codegenconfig.json  index.ts  modules.template.ts  package-lock.json  package.json  readme.md
lib/: .gitignore  libtonclient_dotnet_bridge.so.1.0.0  readme.md  ton_client.lib
lib/macos-x64/: libtonclient_dotnet_bridge.dylib
runtimes/: readme.md
src/: CallbackHandler.cs  ILogger.cs  ITonClient.cs  Interop.cs  StringExtensions.cs  TonClient.cs  TonClient.csproj  TonClient.targets  TonClientConfig.cs  TonClientException.cs  TonSerializer.cs  ton-client-dotnet.csproj  ton-client-dotnet.targets
src/Modules/: AbiModule.cs  BocModule.cs  ClientModule.cs  CryptoModule.cs  NetModule.cs  ProcessingModule.cs  TvmModule.cs  UtilsModule.cs
src/Properties/: AssemblyInfo.cs
src/TonClient/: ITonClient.cs  Interop.cs  JsonExtensions.cs  StringExtensions.cs  TonClient.cs  TonClient.csproj  TonClient.targets  TonClientException.cs  TonSerializer.cs  TonUtil.cs  Utf8String.cs  nuget.props
src/TonClient.Extensions.NodeSe/: MessageInternal.cs  TonClient.Extensions.NodeSe.csproj  TonClientNodeSe.cs  TonClientNodeSeExtensions.cs  readme.md
src/TonClient/Modules/: AbiModule.cs  BocModule.cs  ClientModule.cs  CryptoModule.cs  DebotModule.cs  NetModule.cs  ProcessingModule.cs  ProofsModule.cs  TvmModule.cs  UtilsModule.cs
src/TonClient/Properties/: AssemblyInfo.cs
src/TonClientDemo/: DemoLogger.cs  Program.cs  TonClientDemo.csproj  readme.md
tests/: ConcurrencyTests.cs  DebotFixture.cs  EnvDependentFactAttribute.cs  EnvDependentTheoryAttribute.cs  ListExtensions.cs  MessageInternal.cs  Mutex.cs  StringExtensionTests.cs  TestClient.cs  TestClientExtensions.cs  TestFiles.cs  TonClient.Tests.csproj  TonClientExceptionTests.cs  TonSerializerTests.cs  VersionTest.cs  XUnitTestLogger.cs  ton-client-dotnet-tests.csproj
tests/Modules/: AbiModuleTests.cs  BocModuleTests.cs  ClientModuleTests.cs  CryptoModuleTests.cs  DebotFixture.cs  DebotModulePairTests.cs  DebotModuleTests.cs  DebotModuleTests2.cs  DebotModuleTests3.cs  DebotModuleTests4.cs  DebotModuleTests5.cs  DebotModuleTests6.cs  DebotModuleTests7.cs  DebotModuleTests8.cs  DebotModuleTests9.cs  ITestDebot.cs  NetModuleTests.cs  ProcessingModuleTests.cs  TestDebotBrowser.cs  TestStringExtensions.cs  TvmModuleTests.cs  UtilsModuleTests.cs
